# routes/index.js
@@ -1,13 +1,13 @@
 const routes = require('express').Router();
-const contacts = require('./contacts');
-//const getProfessionalDataController = require('../controllers/professionalData');
+const companies = require('./companies');
+const services = require('./services');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./../swagger.json');
 
 routes.use('/api-docs', swaggerUi.serve);
 routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-routes.use('/contacts', contacts);
-//routes.get('/professional', getProfessionalDataController.getData);
+routes.use('/companies', companies);
+routes.use('/services', services);
 
 module.exports = routes;
